<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="day_arrangement">会议安排</string>
    <string name="select_meet_room">请选择会议室</string>
    <!--<string name="app_name">善林OA</string>-->

    <string name="tab_message">通知</string>
    <string name="tab_communication">消息</string>
    <string name="tab_group">综合</string>
    <string name="tab_me">我的</string>
    <string name="tab_business_card">通讯录</string>

    <string name="pwd_format_tips">密码格式不正确，建议6–12位字母和数字</string>
    <string name="double_click_exit_tips">再点一次退出</string>

    <string name="feedback_hint">请输入您的反馈信息，如果您有任何建议可以告诉我们，也可以留下您的联系方式。</string>


    <!-- 云信视频 -->
    <string name="nrtc_setting_other_device_default_rotation_key">nrtc_setting_other_device_default_rotation_key</string>
    <string name="nrtc_setting_other_device_default_rotation">设备默认旋转角度(特殊设备使用)</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset_key">nrtc_setting_other_device_rotation_fixed_offset_key</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset">设备旋转角度修正偏移量(特殊设备使用)</string>
    <string name="nrtc_setting_vie_rotation_key">nrtc_setting_vie_rotation_key</string>
    <string name="nrtc_setting_vie_rotation">画面旋转</string>
    <string name="nrtc_setting_vie_default_front_camera_key">nrtc_setting_vie_default_front_camera_key</string>
    <string name="nrtc_setting_vie_default_front_camera">默认前置摄像头</string>
    <string name="nrtc_setting_vie_hw_encoder_key">nrtc_setting_vie_hw_encoder_key</string>
    <string name="nrtc_setting_vie_hw_encoder">硬件编码(仅部分设备支持)</string>
    <string name="nrtc_setting_vie_hw_decoder_key">nrtc_setting_vie_hw_decoder_key</string>
    <string name="nrtc_setting_vie_hw_decoder">硬件解码(仅部分设备支持)</string>
    <string name="nrtc_setting_other_server_record_audio_key">nrtc_setting_other_server_record_audio_key</string>
    <string name="nrtc_setting_other_server_record_audio">音频服务器录制</string>
    <string name="nrtc_setting_other_webrtc_compat_key">setting_other_webrtc_compat_key</string>
    <string name="nrtc_setting_other_webrtc_compat">WebRTC兼容</string>
    <string name="nrtc_setting_other_server_record_video_key">nrtc_setting_other_server_record_video_key</string>
    <string name="nrtc_setting_other_server_record_video">视频服务器录制</string>
    <string name="nrtc_setting_voe_call_proximity_key">nrtc_setting_voe_call_proximity_key</string>
    <string name="nrtc_setting_voe_call_proximity">通话期间关闭屏幕</string>
    <string name="nrtc_setting_voe_muted_key">nrtc_setting_voe_muted_key</string>
    <string name="nrtc_setting_voe_muted">语音流静音处理</string>
    <string name="nrtc_setting_vie_muted_key">nrtc_setting_vie_muted_key</string>
    <string name="nrtc_setting_vie_muted">视频流静音处理</string>
    <string name="nrtc_setting_vie_fps_reported_key">nrtc_setting_vie_fps_reported_key</string>
    <string name="nrtc_setting_vie_fps_reported">帧率汇报</string>
    <string name="nrtc_setting_vie_max_bitrate_key">nrtc_setting_vie_max_bitrate_key</string>
    <string name="nrtc_setting_vie_max_bitrate">码率(Kbps)</string>
    <string name="nrtc_setting_voe_audio_aec_key">nrtc_setting_voe_audio_aec_key</string>
    <string name="nrtc_setting_voe_audio_aec">回音消除</string>
    <string name="nrtc_setting_voe_audio_ns_key">nrtc_setting_voe_audio_ns_key</string>
    <string name="nrtc_setting_voe_audio_ns">降噪</string>
    <string name="nrtc_setting_voe_high_quality_key">nrtc_setting_voe_high_quality_key</string>
    <string name="nrtc_setting_voe_high_quality">高清语音</string>
    <string name="nrtc_setting_voe_dtx_key">nrtc_setting_voe_dtx_key</string>
    <string name="nrtc_setting_voe_dtx">人声检测</string>
    <!-- 会议搜索界面，提示功能 -->
    <string name="selectJoinPeopleHint">已选择</string>

    <!-- 环信开始 -->
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="have_connected_with">正在等待对方接受邀请</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="emojicon_test_name">示例</string>
    <string name="delete_contact">删除联系人</string>

    <string name="multi_device_logged_in_device_kick_item">将设备移除</string>
    <!-- 环信结束 -->

    <!--发起日报-->
    <string name="work_report_launch_title">发起工作日报</string>
    <string name="work_weekly_newspaper_launch_title">发起工作周报</string>
    <string name="work_report_right_btn_text">发起</string>
    <string name="work_report_select_date_text">请选择填写时间</string>
    <string name="work_report_please_select">请选择</string>
    <string name="work_report_tomorrow_plan">明日计划</string>
    <string name="work_report_this_week_work">本周工作</string>
    <string name="work_report_please_write_tomorrow_plan">请在此填写您的明日计划.</string>
    <string name="work_report_receiver">接收人</string>
    <string name="work_report_no_write">未填写</string>
    <string name="work_report_has_write">已填写</string>
    <string name="work_report_need_perfect">待完善</string>
    <string name="work_report_click_write">点击输入</string>
    <string name="work_report_professional_qualities">职业素养</string>
    <string name="work_report_personal_behavior">个人行为</string>
    <string name="work_report_environmental_hygiene">环境卫生</string>
    <string name="work_report_save">节约　　</string>
    <string name="work_report_communication_skills">沟通能力</string>
    <string name="work_report_appearance">仪容仪表</string>
    <string name="work_report_work_discipline">工作纪律</string>
    <string name="work_report_teamwork">团队合作</string>
    <string name="work_report_initiative">主动性</string>
    <string name="work_report_cooperation">合作性  </string>
    <string name="work_report_dedication">敬业精神</string>
    <string name="work_report_obey">服从安排</string>

    <!--填写日报-->
    <string name="work_report_plan_work">计划工作</string>
    <string name="work_report_real_work">实际工作</string>
    <string name="work_report_self_evaluate">自评</string>
    <string name="work_report_quantitative">量化数据/结果</string>
    <string name="work_report_write_quantitative">量化</string>
    <string name="work_report_write_work_plan">请在此填写您的计划工作.\n1\n2</string>
    <string name="work_report_write_real_work">请在此填写您的实际工作.\n1\n2</string>
    <string name="work_report_write_self_evaluate">请在此填写您的自评.\n1\n2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_report_write_next">填写下一项</string>
    <string name="work_report_return_last">返回上一项</string>
    <string name="work_report_data_write_not_full">当前有未填写汇报内容，请检查</string>
    <string name="work_report_current_date_had_report">当前日期已有汇报，请重新选择日期</string>
    <string name="work_report_send_sucess">日报提交成功</string>
    <string name="work_weekly_send_success">周报提交成功</string>
    <string name="work_report_send_failed">日报提交失败，请稍后重试</string>
    <string name="work_weekly_send_failed">周报提交失败，请稍后重试</string>
    <string name="work_report_please_write_receiver">请选择接收人</string>

    <!--审批流程-->
    <string name="approval_office_supplies">办公用品</string>
    <string name="title_work_report_approval">审核汇报</string>
    <string name="work_report_check_pending_text">待审核</string>
    <string name="work_report_checked_text">已审核</string>
    <string name="launch_work_report">发起日报</string>
    <string name="title_work_report_all_report">我发起的</string>

    <string name="work_report_type_text">类型</string>
    <string name="work_report_report_time_text">汇报时间</string>
    <string name="work_report_commit_time_text">提交时间</string>
    <string name="work_report_status_text">状态</string>
    <string name="work_report_account_text">汇报人</string>

    <!--审核日报-->
    <string name="work_report_check_right_btn_text">提交</string>
    <string name="work_report_check_title">工作日报</string>
    <string name="work_report_check_evaluation_text">一键评价</string>
    <string name="work_report_no_evaluation">待评价</string>
    <string name="work_report_has_evaluation">已评价</string>
    <string name="work_report_check_work_score">工作评分</string>
    <string name="work_report_check_work_content">工作内容</string>
    <string name="work_report_check_professional_qualities">职业素养</string>
    <string name="work_report_check_teamwork">团队合作</string>
    <string name="work_report_check_man_evaluate">检查人评价</string>
    <string name="work_report_supervisor_evaluate">监督人评价</string>
    <string name="work_report_please_write">请输入</string>
    <string name="no_problem">无问题</string>
    <string name="net_no_connection">网络不通，请检查网络连接！</string>
    <string name="loadding">加载中...</string>
    <string name="data_load_error">数据加载失败，请稍后重试！</string>
    <string name="load_report_data_error">加载日报信息失败！</string>
    <string name="work_report_update_text">更新</string>
    <string name="work_report_edit_report_title">编辑工作日报</string>
    <string name="work_report_update_success">日报更新成功！</string>
    <string name="work_report_update_failed">日报更新失败！</string>
    <string name="work_report_data_no_evaluation">时报信息评价未完成！</string>
    <string name="work_report_data_work_score_limit">工作内容打分不能低于0分或者超过60分！</string>
    <string name="work_report_data_professional_score_limit">职业素养打分不能低于0分或者超过20分！</string>
    <string name="work_report_data_team_score_limit">团队合作打分不能低于0分或者超过20分！</string>
    <string name="weekly_add_work_plan">+ 添加一项计划</string>
    <string name="weekly_add_work_content">+ 添加一项工作</string>
    <string name="write_job_number_text">填写工号</string>
    <string name="find_email_failed">提示：未找到您的邮箱，请手动输入</string>
    <string name="string_meeting_rooms_not_available">暂无会议室</string>
    <string name="string_not_network">当前网络不可用！</string>
    <string name="string_meeting_record_not_available">暂无预订记录</string>
    <string name="string_not_more">没有更多了</string>
    <string name="str_mine_work_record">我的考勤</string>
    <string name="str_mission_work_title">出差申请</string>
    <string name="str_home_my_email">我的邮箱</string>
    <string name="string_notify_title">通知列表</string>
    <string name="string_complete_title">完成</string>
    <string name="string_confirm_phone">确认手机</string>

</resources>
