<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/common_list_item_height"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_report_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/work_report_type_text"
        android:textColor="#FF333333"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_report_account"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/work_report_account_text"
        android:textColor="#FF333333"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_report_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/work_report_report_time_text"
        android:textColor="#FF333333"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_report_commit_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/work_report_commit_time_text"
        android:textColor="#FF333333"
        android:textSize="13sp" />


</LinearLayout>