<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/work_report_plan_work"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/common_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/driver_height"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:background="@color/driver_line" />

            <EditText
                android:id="@+id/et_plan_work"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@color/transparent"
                android:gravity="top"
                android:hint="@string/work_report_write_work_plan"
                android:maxLength="50"
                android:padding="12dp"
                android:textSize="@dimen/common_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/work_report_real_work"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/common_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/driver_height"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:background="@color/driver_line" />

            <EditText
                android:id="@+id/et_real_work"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@color/transparent"
                android:gravity="top"
                android:hint="@string/work_report_write_real_work"
                android:maxLength="50"
                android:padding="12dp"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/work_report_self_evaluate"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/common_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/driver_height"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:background="@color/driver_line" />

            <EditText
                android:id="@+id/et_self_evaluate"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@color/transparent"
                android:gravity="top"
                android:hint="@string/work_report_write_self_evaluate"
                android:maxLength="50"
                android:padding="12dp"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <!-- 这里修复版本没有，之后要添上的-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/work_report_quantitative"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/common_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/driver_height"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:background="@color/driver_line" />

            <EditText
                android:id="@+id/et_quantitative"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@color/transparent"
                android:gravity="top"
                android:hint="@string/work_report_write_quantitative"
                android:maxLength="50"
                android:padding="12dp"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/next_page"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="20dp"
            android:background="@drawable/write_report_bth_bg_selector"
            android:gravity="center"
            android:text="@string/work_report_write_next"
            android:textColor="@color/white"
            android:textSize="@dimen/common_title_size16" />

        <TextView
            android:id="@+id/last_page"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@drawable/write_report_bth_bg_selector"
            android:gravity="center"
            android:text="@string/work_report_return_last"
            android:textColor="@color/white"
            android:textSize="@dimen/common_title_size16" />
    </LinearLayout>
</ScrollView>
