<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical"
    tools:context="com.shanlinjinrong.oa.ui.activity.home.workreport.WorkReportCheckActivity">

    <com.shanlinjinrong.views.common.CommonTopView
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height_48"
        app:leftDrawable="@drawable/toolbar_back"
        app:rightDrawable="@mipmap/filter_btn"
        app:topTitle="@string/title_work_report_approval" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/wrok_report_check_activity_tab_left"
            android:gravity="center"
            android:text="@string/work_report_check_pending_text"
            android:textColor="@color/work_report_check_activity_check_text_color"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/wrok_report_check_activity_tab_right"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/work_report_checked_text"
            android:textColor="@color/work_report_check_activity_check_text_color"
            android:textSize="@dimen/common_text_size" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/report_check_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
